--- a/Continental_Geotherm/README
+++ b/Continental_Geotherm/README
@@ -1,1 +1,8 @@
+# General Information
+
+# Directory Content
+[ContinentalGeotherm.m](https://github.com/LukasFuchs/FDCSGm/blob/main/Continental_Geotherm/ContinentalGeotherm.m)<br>
+&emsp;->
+
+
 
